<resources>
    <string name="app_name">开心网</string>
    <string name="app_name_titlebar">开心网</string>
    <string name="start_com">Copyright © 2007–2014 kaixin001.com</string>
    <string name="start_right">All rights reserved. Ver 3.9.9</string>
    <string name="start_dataerr">数据加载失败</string>
    <string name="load_photo_error">加载照片失败</string>
    <string name="access_token_overdue">您的令牌已过期，请退出后重新登录</string>
    <string name="login_id">账号</string>
    <string name="login_pwd">密码</string>
    <string name="login_auto">记住密码</string>
    <string name="login_btn">登录</string>
    <string name="enroll_btn">注册</string>
    <string name="registration_way">注册方式</string>
    <string name="forget_pwd_way">通过以下方式</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_just_have_a_look">随便看看</string>
    <string name="guide_title_1">QQ帐号登录</string>
    <string name="guide_title_2">分享照片</string>
    <string name="guide_title_3">加好友</string>
    <string name="guide_title_4">添加关注</string>
    <string name="guide_title_5">发送好友请求</string>
    <string name="guide_description_1">分享精彩内容到腾讯微博和QQ空间</string>
    <string name="guide_description_2">便捷的一键式照片批量上传至开心网</string>
    <string name="guide_description_3">从导航直接加好友，发现更多你可能认识的人</string>
    <string name="chat_inputting">正在输入…</string>
    <string name="chat_maximuminput">输入内容最多200字</string>
    <string name="chat_current_text">可能由于网络原因，刚才的消息 \"</string>
    <string name="chat_send_failure">\" 发送失败</string>
    <string name="chat_re_send">重新发送</string>
    <string name="kxyt_friend">可能认识的好友</string>
    <string name="kxyt_star">公共主页</string>
    <string name="my_friends">我的好友</string>
    <string name="login_proccessing">正在登录……</string>
    <string name="login_checknetwork">正在检查网络…</string>
    <string name="login_check_msg">"使用开心网客户端你可以：
1.查看好友动态
2.浏览好友首页,查看好友的照片
3.查看好友的转帖,参与投票
4.更新状态,分享照片
5.写记录、发表新日记
6.及时的查看和回复各类开心消息
7.方便快捷的访问各类组件"</string>
    <string name="not_support_install_flash">你的手机不支持Flash插件</string>
    <string name="please_install_flash">你的手机未安装Flash插件，暂不支持视频播放</string>
    <string name="open_video_failed">无法加载视频</string>
    <string name="login_check_login">立刻开始体验</string>
    <string name="login_check_regist">注册开心网账号</string>
    <string name="logout_proccessing">正在注销……</string>
    <string name="logout_hint">确定注销登录吗？</string>
    <string name="only_one">一</string>
    <string name="record_repost2">转发</string>
    <string name="record_comment2">评论</string>
    <string name="record_repost1">条转发</string>
    <string name="news_refresh_failed">获取数据失败</string>
    <string name="get_circle_member_failed_no_permisssion">你已经退出该圈子，无法查看圈子成员</string>
    <string name="get_circle_news_failed_no_permisssion">你已经退出该圈子，无法查看圈子动态</string>
    <string name="news_postup_failed">请求失败，你是否已赞过了?</string>
    <string name="network_err">网络通信错误</string>
    <string name="dataparse_err">数据解析失败</string>
    <string name="loading">正在载入...</string>
    <string name="ok">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="he">他</string>
    <string name="she">她</string>
    <string name="crash_error">由于手机内存等原因，开心网客户端将重新运行</string>
    <string name="no_network">开心网应用需要网络连接，请检查网络状态</string>
    <string name="unsupport_network">当前网络无法连接服务器，请检查网络状态</string>
    <string name="login_id_empty">请输入你的开心网账号</string>
    <string name="login_pwd_empty">请输入你的开心网密码</string>
    <string name="desktop_item_news">动态</string>
    <string name="desktop_item_message_center">消息</string>
    <string name="desktop_item_talk">聊天</string>
    <string name="desktop_item_friend">好友</string>
    <string name="desktop_item_photo">照片</string>
    <string name="desktop_item_share_photo">分享照片</string>
    <string name="desktop_item_write_record">写记录</string>
    <string name="desktop_item_read_shared_post">看转帖</string>
    <string name="desktop_exit_hint">再按一次返回键，可直接退出程序</string>
    <string name="desktop_title_push_picture">发照片</string>
    <string name="desktop_item_add_friends">加好友</string>
    <string name="desktop_item_circles">圈子</string>
    <string name="desktop_item_position">附近</string>
    <string name="last_update_time">最后更新</string>
    <string name="news">动态</string>
    <string name="news_has_new">新</string>
    <string name="news_all">全部</string>
    <string name="news_important">重要</string>
    <string name="news_photo">照片</string>
    <string name="news_state">状态</string>
    <string name="news_star">公共主页</string>
    <string name="news_nonews">目前没有好友动态</string>
    <string name="post_nonews">目前没有好友转帖</string>
    <string name="post_nohotnews">目前没有热门转帖</string>
    <string name="news_nophoto">目前没有好友照片更新</string>
    <string name="news_nostate">目前没有好友状态更新</string>
    <string name="news_nostar">目前你还没有加任何公共主页</string>
    <string name="news_more">查看更多动态…</string>
    <string name="news_refresh">加载新动态</string>
    <string name="news_diary_pwd">此日记凭密码访问</string>
    <string name="news_state_hint">你正在做什么？</string>
    <string name="input_submit">提交</string>
    <string name="share_not_support">暂不支持此文件类型</string>
    <string name="share_content_length_error">内容不能超过140个字符</string>
    <string name="input_release">发布</string>
    <string name="input_publish">发表</string>
    <string name="input_title_comment">评论</string>
    <string name="input_title_record">写记录</string>
    <string name="share_horoscope">分享运势</string>
    <string name="input_title_state">编辑个性签名</string>
    <string name="input_title_photo">输入照片标题</string>
    <string name="input_title_repost_tag">输入新标签词</string>
    <string name="input_your_comment">请添加你的评论</string>
    <string name="input_submiting">正在提交…</string>
    <string name="input_releasing">正在发布…</string>
    <string name="input_publishing">正在发表…</string>
    <string name="input_replying">正在回复…</string>
    <string name="input_submit_failed">提交失败</string>
    <string name="record_submit_duplicated">请不要连续发重复内容</string>
    <string name="input_feedback_failed">反馈提交失败</string>
    <string name="input_release_failed">发布失败</string>
    <string name="input_reply_failed">回复失败</string>
    <string name="input_comment_failed">发表评论失败</string>
    <string name="input_repost_tag_failed">新标签词发表失败</string>
    <string name="input_failed_no_circle_permission">"回复失败
你已经退出该圈子"</string>
    <string name="input_submit_suc">提交成功</string>
    <string name="input_feedback_suc">反馈提交成功</string>
    <string name="input_release_suc">发布成功</string>
    <string name="input_reply_suc">回复成功</string>
    <string name="input_comment_suc">发表评论成功</string>
    <string name="input_cancel_hint">你确定要取消吗？</string>
    <string name="input_state_empty">状态信息不能为空</string>
    <string name="input_tag_min">至少输入5个字符</string>
    <string name="input_record_empty">记录内容不能为空</string>
    <string name="input_reply_empty">回复内容不能为空</string>
    <string name="input_comment_empty">评论内容不能为空</string>
    <string name="input_repost_tag_empty">观点不能为空</string>
    <string name="input_feedback_empty">反馈内容不能为空</string>
    <string name="input_repost_tag_max">标签词最多能输入16个汉字</string>
    <string name="input_comment_whisper">悄悄话</string>
    <string name="friends_all">全部</string>
    <string name="friends_online">在线</string>
    <string name="friends_visitor">来访</string>
    <string name="friends_star">公共主页</string>
    <string name="friends_online_num">位好友在线</string>
    <string name="friends_star_num">你加了*个公共主页</string>
    <string name="friends_input_find">输入拼音首字母查找</string>
    <string name="friends_select_title">选好友</string>
    <string name="friends_select_limited">最多只能选择30位好友!</string>
    <string name="friends_at_title">选择要提到的人</string>
    <string name="objcomment_close">对方关闭了评论功能</string>
    <string name="objcomment_title_like">赞</string>
    <string name="objcomment_title_like_with">和</string>
    <string name="objcomment_title_like_others">等</string>
    <string name="objcomment_title_like_person">个人</string>
    <string name="objcomment_title_like_state">觉得这个挺赞的</string>
    <string name="objcomment_empty">目前没有评论或者都是悄悄话评论</string>
    <string name="objcomment_error">下载评论失败</string>
    <string name="objcomment_newtime">0秒前</string>
    <string name="objcomment_nolike">还没人赞过</string>
    <string name="objcomment_input_comment">说点什么吧</string>
    <string name="albumview_pwd">请输入密码</string>
    <string name="albumview_pwd_verify">正在验证…</string>
    <string name="albumview_pwd_verify_failed">验证失败</string>
    <string name="photoview_getlist_failed">获取照片列表失败</string>
    <string name="photoview_getlist_data_error">照片专辑已删除或不允许查看</string>
    <string name="albumview_no_data">该专辑下没有照片</string>
    <string name="photoview_downloading">正在下载…</string>
    <string name="photoview_download_failed">下载失败</string>
    <string name="cancel">取消</string>
    <string name="upload">上传</string>
    <string name="input_photo_title_notice">输入照片标题</string>
    <string name="loading_photo">正在载入照片…</string>
    <string name="setting_active">开启</string>
    <string name="setting_inactive">关闭</string>
    <string name="setting_category_new_msg_notification">新消息通知设置</string>
    <string name="setting_notification_vibrate">振动</string>
    <string name="setting_notification_vibrate_summary">收到新消息通知时振动</string>
    <string name="setting_notification_rington">铃声</string>
    <string name="setting_notification_rington_summary">收到新消息通知时播放铃声</string>
    <string name="setting_no_notification_evening">夜间防打扰</string>
    <string name="setting_no_notification_evening_summary">在22:00–09:00关闭新消息通知功能</string>
    <string name="setting_notification_refresh_interval">新消息检测时间间隔</string>
    <string name="setting_widget_refresh_interval">刷新间隔</string>
    <string name="setting_category_widget">桌面小部件(widget)设置</string>
    <string name="setting_check_widget_refresh_interval">桌面动态自动刷新</string>
    <string name="others_check_new_updates">检查新版本</string>
    <string name="setting_notification_message_logout">保持通知</string>
    <string name="setting_notification_message_logout_open_summary">程序退出后仍然保持新消息通知</string>
    <string name="setting_notification_message_logout_close_summary">程序退出后关闭新消息通知</string>
    <string name="software_version_title">软件版本</string>
    <string name="software_current_version">当前版本</string>
    <string name="software_check_version_summary">轻触屏幕手动检查新版本</string>
    <string name="software_version_summary">Kaixin_Android_3.9.9</string>
    <string name="sms_enroll_tv_top1">* 账号为发送短信的手机号</string>
    <string name="sms_enroll_tv_top2">* 编辑短信”6–20位字符“为账户密码，发送至</string>
    <string name="sms_enroll_btn_cm">1069086676688</string>
    <string name="sms_enroll_tv_bottum1">"注：
1. 发送注册短信仅需支付由运营商收取的标准短信费
2. 你的个人信息将被保密，他人不可见
3. 短信注册服务仅支持大陆地区移动、联通、电信用户"</string>
    <string name="forbit">18禁</string>
    <string name="rabbit">兔耳朵</string>
    <string name="delighted">开心</string>
    <string name="happy">幸福</string>
    <string name="heart">爱心</string>
    <string name="embarrass">囧</string>
    <string name="kiss">吻</string>
    <string name="glass">眼镜</string>
    <string name="beard">胡须</string>
    <string name="new_year2">福到</string>
    <string name="new_year3">红包</string>
    <string name="new_year4">爆竹</string>
    <string name="setting_push_repost">转帖订阅推送</string>
    <string name="setting_push_horoscope">运势订阅推送</string>
    <string name="setting_push_repost_open_summary">18:00推送热门转帖信息</string>
    <string name="setting_push_horoscope_open_summary">9:00推送每日运势</string>
    <string name="cloud_album_setting_name">云存储设置</string>
    <string name="cloud_album_setting_network_name">Wi-Fi自动同步</string>
    <string name="cloud_album_setting_wifi_sync">将照片同步至网络私密相册</string>
    <string name="cloud_album_setting_content_name">照片同步设置</string>
    <string name="saveflow_title">流量控制</string>
    <string name="saveflow_item">省流量模式</string>
    <string name="saveflow_item_intro">开启后2G/3G网络不加载大图</string>
    <string name="horoscope_setting_name">运势设置</string>
    <string name="horoscope_setting_choose_title">设置我的星座</string>
</resources>