<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/title_bar" android:layout_alignParentTop="true" layout="@layout/image_filter_title_bar" />
    <com.kaixin001.view.KXHorizontalScrollView android:id="@id/bottom" android:background="@drawable/image_bottombannerbg" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_new_year2" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/new_year_2s" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_year2" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_new_year3" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/new_year_3s" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_year3" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_new_year4" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/new_year_4s" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_year4" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_forbite" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/photoface_forbit" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forbit" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_rabbit" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/photoface_rabbit" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rabbit" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_delighted" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/photoface1_banner" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delighted" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_happy" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/photoface2_banner" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/happy" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_heart" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/photoface3_banner" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/heart" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_embarrass" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/photoface4_banner" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/embarrass" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_kiss" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/photoface9_banner" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kiss" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_glass" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/photoface10_banner" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/glass" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/face_beard" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <ImageView android:background="@drawable/image_filter_banner_bg" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/photoface11_banner" />
                <TextView android:textSize="12.0sp" android:textColor="@drawable/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/beard" />
            </LinearLayout>
        </LinearLayout>
    </com.kaixin001.view.KXHorizontalScrollView>
    <LinearLayout android:gravity="center" android:background="@drawable/black_dot_bg" android:paddingLeft="25.0dip" android:paddingTop="20.0dip" android:paddingRight="25.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/bottom" android:layout_below="@id/title_bar">
        <com.kaixin001.view.KXDecorateImageView android:id="@id/decorate_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" />
    </LinearLayout>
</RelativeLayout>