<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" android:isScrollContainer="true">
        <ImageView android:id="@id/photo_upload_preview_image" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerInside" android:layout_centerInParent="true" />
        <LinearLayout android:orientation="horizontal" android:id="@id/photo_upload_progress_item" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <ProgressBar android:layout_gravity="center_vertical" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:indeterminateDrawable="@drawable/progress_bar_drawable" style="?android:attr/progressBarStyleSmall" />
            <TextView android:textColor="@drawable/white" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading_photo" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/photo_upload_bottom_bar" android:background="#ffbfbfbf" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/photo_upload_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/input_photo_title_notice" android:lines="1" android:scrollHorizontally="true" android:singleLine="true" android:maxLength="63" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="18.0dip" android:textColor="@drawable/black" android:id="@id/photo_upload_button_upload" android:background="@drawable/common_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/upload" android:layout_weight="1.0" />
            <Button android:textSize="18.0dip" android:textColor="@drawable/black" android:id="@id/photo_upload_button_cancel" android:background="@drawable/common_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>